2016-06-08 <jthaler>
   Fixed bug in MeasureDefinition.cc where axes were not completely defined,
      leading to problems with multi-pass axes 
2016-04-04 <jthaler>
   Fixed Njettiness.cc to give value of _current_tau_components even if less
      than N constituents
   Delete extraneous code in example_advanced_usage.cc
2016-03-29 <jthaler>
   Update for FJ 3.2.0 to deal with SharedPtr () deprecation
2015-09-28 <jthaler>
   Updated NEWS for 2.2.1 release.
2015-09-18 <jthaler>
   Fixed duplicate XConePlugin entry in Makefile.
2015-08-20 <jthaler>
   Trying to fix "abs" bug in ExtraRecombiners.cc
2015-08-19 <jthaler>
   Adding arXiv numbers to XCone papers
   Used this_jet in example_basic_usage.
   Fixed typo in example_advanced_usage header.
   Added copy/paste code in README file.
2015-08-13 <jthaler>
   Ready for 2.2.0 release
2015-07-23 <jthaler>
   Fixed typo in GenET_GenKT_Axes error message
   Added _too_few_axes_warning to ExclusiveJetAxes and ExclusiveCombinatorialJetAxes
   Switched to ../data/single_event_ee.dat for make check
2015-07-20 <jthaler>
   Renamed WinnerTakeAllRecombiner.hh/cc to ExtraRecombiners.hh/cc
   Added _too_few_axes_warning to HardestJetAxes
   Added GenKT_Axes and OnePass_GenKT_Axes and Comb_GenKT_Axes (using E-scheme recombination).
   Added warning about p < 0 or delta <=0 in GenKT axes finders.
   Added warning about beta <= 0 in all measures.
2015-07-10 <jthaler>
   Putting in small tweaks in documentation to get ready for 2.2 release candidate 1.
2015-06-15 <jthaler>
   Starting doxygen file for eventual improved documentation.
   Starting long process of improving documentation throughout.
   Made the basic usage file a bit easier to read.
   Adding in LimitedWarnings for old style constructors
2015-06-12 <jthaler>
   Synchronized definition of new measures with XCone paper.
   In MeasureDefinition, added default values of jet_distance_squared and beam_distance_squared for cases where we don't want to optimize specifically.