@@ -1,3 +1,5 @@
+2018-07-05 <jthaler>
+   Fixed bug in AxesDefinition.hh where _recomb was used before it was declared.
 2016-06-08 <jthaler>
    Fixed bug in MeasureDefinition.cc where axes were not completely defined,
       leading to problems with multi-pass axes 
